--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Minimalist theme
+title: Gerardo Jose Moreno Urriola
 logo: /assets/img/profile_photo.png
-email: bogus at gmail dot com
-description: Minimalist is a theme powered by Jekyll. It is modified based on the Minimal theme.
+email: gerardomoreno1024@gmail.com
+description: Research student of the Robotics, Intelligent Systems and Simulation group, UTP.
 show_downloads: false
 google_analytics: G-ZLK2GHB055
 color-scheme: light
