--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Gerardo Jose Moreno Urriola
+title: Gerardo Moreno Urriola
 logo: /assets/img/profile_photo.png
 email: gerardomoreno1024@gmail.com
 description: Research student of the Robotics, Intelligent Systems and Simulation group, UTP.
