--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Gerardo Moreno Urriola
 logo: /assets/img/profile_photo.png
-email: gerardomoreno1024@gmail.com
+email: gerardomoreno1024@gmail.com - gerardo.moreno2@utp.ac.pa
 description: Research student of the Robotics, Intelligent Systems and Simulation group, UTP.
 show_downloads: false
 google_analytics: G-ZLK2GHB055
